# qiftop

./: .clang-tidy  .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  HACKING.md  README.md  SECURITY.md
.github/: copilot-instructions.md  release.yml
.github/workflows/: ci.yml  clang-tidy.yml  integration.yml  pages.yml  release.yml
bench/: BenchData.h  CMakeLists.txt  bench_connection_aggregator.cpp  bench_dbus_types.cpp  bench_filter.cpp  bench_flow_topk.cpp  bench_pipeline_tick.cpp
bench/integration/bpf-eval/: CMakeLists.txt  DESIGN.md  README.md  birth.bt  conntrack_collect.cpp  cost-bpf-eval.sh  gen.cpp  run-bpf-eval.sh  score.py  sink.cpp
docs/: ATTRIBUTION.md  CHANGELOG.md  HACKING.md  LIBQIFTOP.md  PORTABILITY.md
docs/demo/: README.md  capture-gif.sh  capture-still.sh  capture-tui-gif.sh  nqiftop-demo.cpp  probe.sh  qiftop-demo.cpp
docs/demo/openbox/: rc.xml
examples/: README.md
examples/ndjson-connections/: CMakeLists.txt  main.cpp
examples/ndjson-stream/: CMakeLists.txt  main.cpp
examples/prometheus-exporter/: CMakeLists.txt  README.md  main.cpp
examples/snapshot-export/: CMakeLists.txt  main.cpp
examples/top-talkers/: CMakeLists.txt  main.cpp
scripts/: integration-test.sh  local-integration.sh  run-clang-tidy.sh
src/: main.cpp
src/agent/: Application.cpp  Application.h  Attribution.cpp  Attribution.h  AttributionHintManager.cpp  AttributionHintManager.h  Config.cpp  Config.h  ConnectionsService.cpp  ConnectionsService.h  IdleManager.cpp  IdleManager.h  InterfacesService.cpp  InterfacesService.h  main.cpp
src/aggregate/: BandwidthScale.h  ConnectionAggregator.cpp  ConnectionAggregator.h  InterfaceAggregator.cpp  InterfaceAggregator.h
src/backend/: Attribution.cpp  Attribution.h  BirthCache.h  BpfBirthResolver.h  CompositeResolver.h  Connection.h  ConnectionMonitor.cpp  ConnectionMonitor.h  DeepAttribution.h  DeepAttributionQueue.h  DeepAttributionWorker.cpp  DeepAttributionWorker.h  MonitorCapabilities.h  NetworkMonitor.cpp  NetworkMonitor.h  PlatformInfo.cpp  PlatformInfo.h  ProcessDetails.h  ProcessResolver.h  ProcessResolverFactory.cpp  ProcessResolverFactory.h  ResolverDeepWorker.cpp  ResolverDeepWorker.h
src/backend/bsd/: BsdConnectionMonitor.cpp  BsdConnectionMonitor.h  BsdConnectionWorker.cpp  BsdConnectionWorker.h  BsdFlowKey.h  BsdNetworkMonitor.cpp  BsdNetworkMonitor.h  BsdNetworkWorker.cpp  BsdNetworkWorker.h  BsdSocketResolver.cpp  BsdSocketResolver.h  CMakeLists.txt
src/backend/dbus/: DBusConnectionMonitor.cpp  DBusConnectionMonitor.h  DBusNetworkMonitor.cpp  (+1 more)
src/backend/linux/: BirthDecode.h  BpfBirthReader.cpp  BpfBirthReader.h  BpfBirthSource.h  CMakeLists.txt  CgroupClassifier.cpp  CgroupClassifier.h  CgroupParse.h  ConntrackMonitor.cpp  ConntrackMonitor.h  ConntrackOrient.h  FlowTopK.h  NetlinkMonitor.cpp  NetlinkMonitor.h  NetlinkWorker.cpp  NetlinkWorker.h  NetnsScanner.cpp  NetnsScanner.h  ProcDetails.cpp  ProcDetails.h  ProcSnapshot.h  SockDiagDump.cpp  SockDiagDump.h  SockDiagParse.h  SockDiagResolver.cpp  SockDiagResolver.h
src/backend/linux/bpf/: birth.bpf.c  birth_events.h  vmlinux_min.h
src/config/: Settings.cpp  Settings.h
src/dbus/: Types.cpp  Types.h
src/dns/: DnsResolver.cpp  DnsResolver.h  QtDnsResolver.cpp  QtDnsResolver.h
src/tui/: Curses.h  Expansion.h  Screen.cpp  Screen.h  TuiApp.cpp  TuiApp.h  TuiFormat.h  TuiTheme.h  main.cpp
src/ui/: ConnectionAttributionDelegate.cpp  ConnectionAttributionDelegate.h  ConnectionFilterProxy.cpp  ConnectionFilterProxy.h  ConnectionFlowDelegate.cpp  ConnectionFlowDelegate.h  ConnectionGroupProxy.cpp  ConnectionGroupProxy.h  ConnectionHeuristics.h  ConnectionModel.cpp  ConnectionModel.h  GaugeRoles.h  GuiTheme.cpp  GuiTheme.h  InterfaceFilterProxy.cpp  InterfaceFilterProxy.h  InterfaceNameDelegate.cpp  InterfaceNameDelegate.h  MainWindow.cpp  MainWindow.h  NetworkModel.cpp  NetworkModel.h  RowGaugeDelegate.cpp  RowGaugeDelegate.h  SettingsDialog.cpp  SettingsDialog.h  TrayManager.cpp  TrayManager.h
src/util/: Autostart.cpp  Autostart.h  ConnectionFilter.cpp  ConnectionFilter.h  ConnectionHeuristics.h  Exportable.h  Exporter.cpp  Exporter.h  HandoffClient.cpp  HandoffClient.h  HandoffServer.cpp  HandoffServer.h  Logging.cpp  Logging.h  PrivilegeEscalator.cpp  PrivilegeEscalator.h  Units.h
tests/: CMakeLists.txt  lsan.supp  test_agent_config.cpp  test_agent_integration.cpp  test_aggregator_signals.cpp  test_attribution.cpp  test_attribution_hints.cpp  test_autostart.cpp  test_backend_capabilities.cpp  test_birth_cache.cpp  test_birth_decode.cpp  test_bpf_birth_resolver.cpp  test_cgroup_parse.cpp  test_cgroup_real_fixtures.cpp  test_composite_resolver.cpp  test_connection_aggregator.cpp  test_conntrack_orient.cpp  test_dbus_types.cpp  test_deep_queue.cpp  test_deep_worker.cpp  test_direction.cpp  test_dns_cache.cpp  test_ema.cpp  test_exporter.cpp  test_filter.cpp  test_flow_topk.cpp  test_forwarded.cpp  test_group_proxy.cpp  test_gui_theme.cpp  test_handoff_auth.cpp  test_idle.cpp  test_interface_aggregator.cpp  test_mainwindow_smoke.cpp  test_network_model.cpp  test_priv_escalator.cpp  test_proc_details.cpp  test_proc_snapshot.cpp  test_process_resolver_null.cpp  test_proxies.cpp  test_resolver_factory.cpp  (+7 more)
tests/fakes/: FakeMonitors.h
tests/fixtures/cgroup_real/: docker_v1_cgroupfs.txt  docker_v2_cgroupfs.txt  docker_v2_systemd.txt  host_user_app_service.txt  host_user_session.txt  host_user_systemd_manager.txt  k8s_containerd_burstable.txt  k8s_containerd_guaranteed.txt  k8s_crio_besteffort.txt  k8s_crio_cgroupfs.txt  lxc_payload.txt  lxd_systemd.txt  nspawn_machinectl.txt  nspawn_machinectl_inside.txt  nspawn_template_service.txt  podman_rootful_cgroupfs.txt  podman_rootful_v2.txt  podman_rootless_v2.txt
tests/integration/attribution/: CMakeLists.txt  README.md
tests/integration/attribution/driver/: qiftop-attribution-probe.cpp
tests/integration/attribution/runners/: run-crio.sh  run-docker.sh  run-k3d.sh  run-k8s.sh  run-podman.sh  run-systemd-dbus.sh
tests/integration/vagrant/: Vagrantfile  provision-fedora.sh  provision.sh
(+3 files in other folders)
